# overseer

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  alchemy.run.ts  components.json  index.html  justfile  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.opencode/plans/: 1769449022602-misty-tiger.md  1769450346738-stellar-panda.md
.overseer/: tasks.db
crates/os/: Cargo.toml
crates/os-core/: Cargo.toml
crates/os-core/src/: error.rs  events.rs  gates.rs  gates_config.rs  gates_exec.rs  git_ai.rs  help.rs  learnings.rs  lib.rs  overseer.rs  repos.rs  reviews.rs  sessions.rs  store.rs  tasks.rs  validation.rs  vcs.rs
crates/os-core/src/types/: enums.rs  event.rs  gate.rs  git_ai.rs  help.rs  ids.rs  io.rs  learning.rs  mod.rs  repo.rs  review.rs  session.rs  task.rs  vcs.rs
crates/os-db/: Cargo.toml
crates/os-db/migrations/: 0001_init.sql
crates/os-db/src/: event_repo.rs  gate_repo.rs  git_ai_repo.rs  help_repo.rs  idempotency.rs  learning_repo.rs  lib.rs  repo_repo.rs  review_repo.rs  schema.rs  session_repo.rs  store.rs  task_repo.rs  task_vcs_repo.rs  util.rs
crates/os-events/: Cargo.toml
crates/os-events/src/: bus.rs  lib.rs  store.rs  types.rs
crates/os-mcp/: Cargo.toml
crates/os-mcp/src/: api.rs  executor.rs  lib.rs  protocol.rs
crates/os-serve/: Cargo.toml
crates/os-serve/src/: gate_polling.rs  lib.rs  openapi.rs  relay.rs  sse.rs
crates/os-serve/src/middleware/: correlation.rs  idempotency.rs  mod.rs
crates/os-serve/src/routes/: agents.rs  error.rs  events.rs  gates.rs  git_ai.rs  help.rs  learnings.rs  mod.rs  repos.rs  reviews.rs  tasks.rs  vcs.rs
crates/os-vcs/: Cargo.toml
crates/os-vcs/src/: backend.rs  detection.rs  git.rs  jj.rs  lib.rs
crates/os/src/: main.rs
docs/: ARCHITECTURE-V2.md  ARCHITECTURE.md  CLI.md  MCP.md  react-flow-dagre-guide.md
docs/adr/: 0001-mvp-system-architecture.md
docs/design/: mvp-program-design.md  mvp-vertical-slices.md
docs/inspiration/: DESIGN-ANALYSIS.md
docs/research/: 39-executor-effect-client-patterns.md  47-tailwind-shadcn-base-ui.md  cloudflare-alchemy-do.md  cloudflare-topology-without-websockets.md  effect-atom-react-client.md  effect-v4-backend.md  github-issues-states.md  kumo-fate-client.md
docs/specs/: 00-monorepo.md  01-core-domain.md  02-vcs.md  03-review.md  03a-gates.md  04-events.md  05-relay.md  06-git-ai.md  07-agent-primitives.md  08-web-ui.md  09-mcp-rquickjs.md  10-system-integration.md  11-end-to-end-audit.md  12-feedback-loops.md  13-implementation-guide.md  ui-bundling-plan.md  ui-feedback-fixes.md
host/: package.json
host/src/: index.ts  mcp.ts  ui.ts
mcp/: AGENTS.md  README.md  package-lock.json  package.json
mcp/src/: decoder.ts  executor.ts  server.ts  types.ts
mcp/src/api/: AGENTS.md  index.ts  tasks.ts
mcp/src/tests/: integration.test.ts
npm/overseer/: index.js  package-lock.json  package.json  pnpm-lock.yaml
npm/scripts/: build-npm.sh  generate-platform-package.mjs  update-versions.mjs
openapi/: README.md  overseer.yaml
overseer/: AGENTS.md  Cargo.toml
overseer/.overseer/: tasks.db
overseer/src/: AGENTS.md  error.rs  main.rs  output.rs  testutil.rs  types.rs
overseer/src/commands/: AGENTS.md  task.rs  ui.rs  vcs.rs
overseer/src/core/: AGENTS.md  context.rs  mod.rs  task_service.rs  workflow_service.rs
overseer/src/db/: AGENTS.md  schema.rs  task_repo.rs
overseer/tests/: task_service_test.rs
scripts/: capture-evidence.mjs  check-reminder.mjs  generate-types.sh
skills/overseer/: SKILL.md
skills/overseer-plan/: SKILL.md
specs/: crate-extraction.md
spikes/effect-v4-cloudflare/: README.md  env.d.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
spikes/fate-conflict-reconnect/: README.md  package-lock.json  package.json  tsconfig.json
spikes/foldkit-effect-cloudflare/: README.md  alchemy.run.ts  package-lock.json  package.json  tsconfig.browser.json  tsconfig.json  tsconfig.worker.json  vitest.browser.config.ts  vitest.workerd.config.ts
spikes/persistent-cache-prefetch/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: api.ts  client-atoms.ts  main.ts  main.tsx  overseer-utility-theme.css  prototype-app.ts  prototype-app.tsx  prototype-server.ts  prototype.css  utility-theme.css
src/browser/: main.tsx
src/contract/: http-api.ts  openapi.ts  representations.ts
src/domain/: actor.ts
src/lib/: ui-classnames.ts
src/prototype/: prototype-switcher.tsx  timeline-contribution.css  timeline-contribution.tsx
src/runtime/: gateway.ts  project.ts  workspace-catalog.ts
src/ui/: theme-provider.tsx  theme.css
tests/browser/: app-shell.test.ts
tests/fixtures/: compatibility.ts  gateway-worker.ts  gateway.ts
tests/http/: discovery.test.ts
tests/workerd/: effect-cloudflare.test.ts
ui/: AGENTS.md  index.html  package-lock.json  package.json
ui/dist-server/: server.js  server.js.map
ui/scripts/: build-server.mjs
ui/src/: decoder.ts  types.ts
webapp/: index.html  package.json
webapp/src/: App.tsx  app.css  main.tsx
website/: astro.config.mjs
(+101 files in other folders)
