[workspace]
resolver = "2"
members = [
    "crates/os",
    "crates/os-core",
    "crates/os-db",
    "crates/os-vcs",
    "crates/os-events",
    "crates/os-serve",
    "crates/os-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/your-org/overseer"

[workspace.dependencies]
os-core = { path = "crates/os-core" }
os-db = { path = "crates/os-db" }
os-vcs = { path = "crates/os-vcs" }
os-events = { path = "crates/os-events" }
os-serve = { path = "crates/os-serve" }
os-mcp = { path = "crates/os-mcp" }

tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
ulid = "1.2"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.38", features = ["bundled"] }
jj-lib = "=0.37"
gix = { version = "0.77", default-features = false, features = [
    "index",
    "worktree-mutation",
    "status",
    "revision",
    "dirwalk",
    "tree-editor",
] }
pollster = "0.4"
futures = "0.3"
bstr = "1.9"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
rquickjs = { version = "0.9", features = ["chrono"] }
utoipa = { version = "5.4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
rust-embed = "8.11"
mime_guess = "2.0"
owo-colors = { version = "4", features = ["supports-colors"] }
shell-words = "1.1"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
serde_yaml = "0.9"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev.package.jj-lib]
opt-level = 1

[profile.dev.package.gix]
opt-level = 1

[profile.dev.package.rquickjs]
opt-level = 1
