[package]
name = "os-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
os-vcs.workspace = true
os-events.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
ulid.workspace = true
tokio.workspace = true
shell-words.workspace = true
toml.workspace = true
serde_yaml.workspace = true
utoipa.workspace = true
