[package]
name = "os-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
os-core.workspace = true
os-db.workspace = true
os-events.workspace = true
serde.workspace = true
serde_json.workspace = true
rquickjs.workspace = true
thiserror.workspace = true
chrono.workspace = true
