[package]
name = "os"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
os-core.workspace = true
os-serve.workspace = true
os-mcp.workspace = true
os-db.workspace = true
os-vcs.workspace = true
os-events.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
owo-colors.workspace = true
chrono.workspace = true
